# wavect-learn

./: .gitignore  README.md  docker-compose.yml
aptos-smart-contract/: Move.toml  README.md
aptos-smart-contract/.aptos/: config.yaml
aptos-smart-contract/sources/: UserProfile.move
btc-ordinals/: ReadMe.md
circom/: README.md  proof.json
combiner/src/: args.rs  main.rs
command-line-interface/: Cargo.toml
contracts/: ReadMe.md  oldEnough.zok
contracts/src/: verifier.sol
frontend/: Dockerfile.prod  next.config.js  package-lock.json  package.json
frontend/pages/: index.tsx
hedera-first-project/: index.js  jest.config.js  package.json  pnpm-lock.yaml  readme.md
hedera-first-project/functions/: create-account.js  create-client.js  create-query-chain-data.js  create-token.js  create-transaction.js
hedera-first-project/tests/: test.js
hedera-high-level-wrapper/: README.md  package.json  pnpm-lock.yaml
hedera-high-level-wrapper/src/: account.ts  client.ts  token.ts
hedera-high-level-wrapper/tests/: examples.spec.ts
near-smart-contract/: Cargo.toml  Readme.md
near-smart-contract/src/: lib.rs
rust-basics/src/: main.rs
rust-command-line-interface/src/: main.rs
rust-ethereum/: Cargo.toml  Readme.md
rust-ethereum/src/: simple_transactions.rs
rust-web-api/: Cargo.toml  Readme.md
rust-web-api/src/: main.rs
rust-web-api/src/catchers/: http_catchers.rs
rust-web-api/src/models/: user.rs
rust-web-api/src/routes/: routes.rs
sui-contracts-dapp/: readme.md
ton-chat-bot-example/: package.json  readme.md
zk-circom/: verifier.sol
(+39 files in other folders)
